Fixes folder list not visible on welcome screen

--- a/src/css/mat-stepper.scss
+++ b/src/css/mat-stepper.scss
@@ -4,4 +4,6 @@
 
 .mat-horizontal-content-container {
     padding: 0px !important;
+    width: 100% !important;
+    height: 100% !important;
 }
